     * Fixed player team name in several scenarios.
     * Fixed player side carryover in several scenarios.
 * Language and i18n:
   * Updated translations: Galician, German, Italian, Portuguese,
     Scottish Gaelic, Slovak, Spanish
 * Lua API:
   * Upgraded Lua to version 5.2.3.
 * Miscellaneous and bug fixes:
   * Micro AIs: only display on-screen error messages when in debug mode

Version 1.11.18:
 * Add-ons server:
   * Fixed attempt to access freed memory in [request_campaign_list] handler.
 * Campaigns:
   * Eastern Invasion:
     * Updated maps for scenario 14, 16 and 17b.
   * Legend of Wesmere:
     * Fixed broken sides configuration and starting locations in several
       scenarios.
     * The Uprooting: fixed Arkildur not appearing in multiplayer mode.
     * Ka’lian under attack: fixed units and labels offset due to different map
       sizes after Kalenz and Landar appear (bug #22073).
     * Bounty Hunters: fixed Olurf being unable to recruit.
     * Human Alliance: completely redone and rebalanced. This fixes bug #21941,
       implements FR #16600, and addresses comments made in the feedback topic
       on the forums.
     * Chapter 4 is now available in multiplayer mode again.
     * Minor (mostly cosmetic) changes to several maps.
   * Under the Burning Suns:
     * Fixed recruited Desert Archers being always male.
     * Fixed malformed rand range errors during AI turns on medium difficulty
       in 'A Stirring in the Night'.
     * Fixed 100 vs. 99 movement cost warnings caused by the Desert Shyde and
       Star unit types
     * Fixed bug #22800: Cloaked Figure appears in strange location.
     * Fixed bug #22799: No allies killed by enemy reinforcements.
     * Fixed bug #22790: Various problems with dehydration.
 * Graphics:
   * New Ancient Lich baseframe and animations
 * Language and i18n:
   * Updated translations: Hungarian, Italian, Lithuanian, Slovak, Spanish
 * Miscellaneous and bug fixes: